--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>SOLS</title>
         <link rel="stylesheet" href="style.css">
@@ -8,18 +8,19 @@
             <div class="navbar">
                 <img src="logo.png" class="logo">
                 <ul>
-                    <li><a href="#">Mājas</a></li>
-                    <li><a href="#">Alfabēts</a></li>
-                    <li><a href="#">Spēles</a></li>
-                    <li><a href="#">Video</a></li>
-                    <li><a href="/Par">Par</a></li>
+                    <li><a href="#Home">Mājas</a></li>
+                    <li><a href="#Abc">Alfabēts</a></li>
+                    <li><a href="#Games">Spēles</a></li>
+                    <li><a href="#Video">Video</a></li>
+                    <li><a href="#Par" class="button">Par</a></li>
                 </ul>
         </div>
 
         <div class="content">
             <h1>Mācies Digitāli!</h1>
-            <p>"Noslēpums, lai tiktu uz priekšu ir sākšana darīt."  -Marks Tvens</p>
+            <p>"Noslēpums, lai tiktu uz priekšu ir sākšana darīt."<br>-Marks Tvens</p>
         </div>
 
     </body>
+    <script>src="script.js"</script>
 </html>
