--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link rel="stylesheet" href="style.css">
+        <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <!-- Navigational Bar Section -->
         <div class="banner">
-            <div class="navbar">
-                <img src="logo.png" class="logo">
-                <ul>
-                    <li><a href="#Home">Mājas</a></li>
-                    <li><a href="#Abc">Alfabēts</a></li>
-                    <li><a href="#Games">Spēles</a></li>
-                    <li><a href="#Video">Video</a></li>
-                    <li><a href="#Par" class="button">Par</a></li>
-                </ul>
+            <nav class="navbar">
+                <div class="navbar_container">
+                    <a href="#home"><img src="logo.png" class="logo"></a>
+                    <ul class="navbar_menu">
+                        <li><a href="#home" class="navbar_links" id="home-page">Mājas</a></li>
+                        <li><a href="#alphabet" class="navbar_links" id="abc-page">Alfabēts</a></li>
+                        <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="#video" class="navbar_links" id="video-link">Video</a></li>
+                        <li><a href="#par" class="navbar_links" id="about-link">Par</a></li>
+                    </ul>
+                </nav>   
+            </div>
         </div>
 
         <div class="content">
