--- a/par.html
+++ b/par.html
@@ -12,23 +12,24 @@
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="#home"><img src="logo.png" class="logo"></a>
+                    <a href="/home.html"><img src="logo.png" class="logo"></a>
                     <ul class="navbar_menu">
-                        <li><a href="#home" class="navbar_links" id="home-page">Mājas</a></li>
+                        <li><a href="/home.html" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="#alphabet" class="navbar_links" id="abc-page">Alfabēts</a></li>
                         <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
                         <li><a href="#video" class="navbar_links" id="video-link">Video</a></li>
-                        <li><a href="#par" class="navbar_links" id="about-link">Par</a></li>
+                        <li><a href="/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
             </div>
         </div>
 
-        <div class="content">
-            <h1>Mācies Digitāli!</h1>
-            <p>"Noslēpums, lai tiktu uz priekšu ir sākšana darīt."<br>-Marks Tvens</p>
+        <div class="content2">
+            <a><img src="image1.png" class="image"></a>
+            <h1>Programmēšana I<br>6. tēmas ietvaros</h1>
+            <p>Projekta veidotājs - Aleksis Počs</p>
         </div>
-
+       
     </body>
     <script>src="script.js"</script>
 </html>
