--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                         <li><a href="/home.html" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="#alphabet" class="navbar_links" id="abc-page">Alfabēts</a></li>
                         <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
-                        <li><a href="#video" class="navbar_links" id="video-link">Video</a></li>
+                        <li><a href="/video.html" class="navbar_links" id="video-link">Video</a></li>
                         <li><a href="/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
