--- a/video.html
+++ b/video.html
@@ -24,12 +24,14 @@
             </div>
         </div>
 
-        <div class="content2">
-            <a><img src="image1.png" class="image"></a>
-            <h1>Programmēšana I<br>6. tēmas ietvaros</h1>
-            <p>Projekta veidotājs - Aleksis Počs</p>
+        <div class="content3">
+            <h1>Video materiāli<br><br><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/W5e9GJfHC4A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </h1>
         </div>
-       
+
+
+        
+
     </body>
     <script>src="script.js"</script>
 </html>
