--- a/alfabets.html
+++ b/alfabets.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="alfabetsPage.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
@@ -25,11 +25,29 @@
         </div>
 
         <div class="content">
-            <h1>Mācies Digitāli!</h1>
-            <p>"Noslēpums, lai tiktu uz priekšu ir sākšana darīt."<br>-Marks Tvens</p>
             <div>
-                <a href="/alfabets.html"><button type="button"><span></span>Burti</button></a>
-                <a href="/video.html"><button type="button"><span></span>Video</button></a>
+                <button>A</button>
+                <button>B</button>
+                <button>C</button>
+                <button>D</button>
+                <button>E</button>
+                <button>F</button>
+                <button>G</button>
+                <button>H</button>
+                <button>I</button>
+                <button>J</button>
+                <button>K</button>
+                <button>L</button>
+                <button>M</button>
+                <button>N</button>
+                <button>O</button>
+                <button>P</button>
+                <button>R</button>
+                <button>S</button>
+                <button>T</button>
+                <button>U</button>
+                <button>V</button>
+                <button>Z</button>
             </div>
         </div>
 
