--- a/videoLapa/video.html
+++ b/videoLapa/video.html
@@ -12,13 +12,13 @@
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/home.html"><img src="logo.png" class="logo"></a>
+                    <a href="/homeLapa/home.html"><img src="/Atteli/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
-                        <li><a href="/home.html" class="navbar_links" id="home-page">Mājas</a></li>
-                        <li><a href="/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
+                        <li><a href="/homeLapa/home.html" class="navbar_links" id="home-page">Mājas</a></li>
+                        <li><a href="/alfabetsLapa/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
                         <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
-                        <li><a href="/video.html" class="navbar_links" id="video-link">Video</a></li>
-                        <li><a href="/par.html" class="navbar_links" id="about-link">Par</a></li>
+                        <li><a href="video.html" class="navbar_links" id="video-link">Video</a></li>
+                        <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
             </div>
