very good, very nice

--- a/alfabetsLapa/alfabets.html
+++ b/alfabetsLapa/alfabets.html
@@ -24,33 +24,52 @@
             </div>
         </div>
 
+        
         <div class="content">
             <div>
-                <button>A</button>
-                <button>B</button>
-                <button>C</button>
-                <button>D</button>
-                <button>E</button>
-                <button>F</button>
-                <button>G</button>
-                <button>H</button>
-                <button>I</button>
-                <button>J</button>
-                <button>K</button>
-                <button>L</button>
-                <button>M</button>
-                <button>N</button>
-                <button>O</button>
-                <button>P</button>
-                <button>R</button>
-                <button>S</button>
-                <button>T</button>
-                <button>U</button>
-                <button>V</button>
-                <button>Z</button>
+                <a class="tooltip">
+                    <button>A</button>
+                    <span><img src="/Atteli/Burti/A.png">
+                    <br>
+                    <h3>Apelsīns</h3>
+                    <br>
+                    <button onclick="myFunction('a')">🔊</button>
+                    <audio id="aSound" src="/Sounds/a.mp3"></audio>
+                    </span>
+                 </a>
+                 <a class="tooltip">
+                    <button>B</button>
+                    <span><img src="/Atteli/Burti/B.png">
+                    <br>
+                    <h3>Bumba</h3>
+                    <br>
+                    <button onclick="myFunction('b')">🔊</button>
+                    <audio id="aSound" src="/Sounds/a.mp3"></audio>
+                    </span>
+                 </a>
+                 <a class="tooltip">
+                    <button>C</button>
+                    <span><img src="/Atteli/Burti/C.png">
+                    <br>
+                    <h3>Citrons</h3>
+                    <br>
+                    <button onclick="myFunction('c')">🔊</button>
+                    <audio id="aSound" src="/Sounds/a.mp3"></audio>
+                    </span>
+                 </a>
+                 <a class="tooltip">
+                    <button>D</button>
+                    <span><img src="/Atteli/Burti/D.png">
+                    <br>
+                    <h3>Draugi</h3>
+                    <br>
+                    <button onclick="myFunction('d')">🔊</button>
+                    <audio id="aSound" src="/Sounds/a.mp3"></audio>
+                    </span>
+                 </a>
             </div>
         </div>
 
     </body>
-    <script>src="script.js"</script>
+    <script src="script.js"></script>
 </html>
