--- a/alfabetsLapa/alfabets.html
+++ b/alfabetsLapa/alfabets.html
@@ -15,8 +15,8 @@
                     <a href="/homeLapa/home.html"><img src="/Atteli/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/homeLapa/home.html" class="navbar_links" id="home-page">Mājas</a></li>
-                        <li><a href="alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
-                        <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="alfabets.html" class="navbar_linksA" id="abc-page">Alfabēts</a></li>
+                        <li><a href="/gamesLapa/spelesLapa.html" class="navbar_links" id="game-page">Spēles</a></li>
                         <li><a href="/videoLapa/video.html" class="navbar_links" id="video-link">Video</a></li>
                         <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
