--- a/gamesLapa/spelesLapa.html
+++ b/gamesLapa/spelesLapa.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="aboutPage.css" rel="stylesheet" type="text/css"/>
+        <link href="speles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
@@ -16,20 +16,21 @@
                     <ul class="navbar_menu">
                         <li><a href="/homeLapa/home.html" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabetsLapa/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
-                        <li><a href="/gamesLapa/spelesLapa.html" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="spelesLapa.html" class="navbar_linksA" id="game-page">Spēles</a></li>
                         <li><a href="/videoLapa/video.html" class="navbar_links" id="video-link">Video</a></li>
-                        <li><a href="par.html" class="navbar_linksA" id="about-link">Par</a></li>
+                        <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
             </div>
         </div>
 
-        <div class="content">
-            <a><img src="/Atteli/image1.png" class="image"></a>
-            <h1>Programmēšana I<br>6. tēmas ietvaros</h1>
-            <p>Projekta veidotājs - Aleksis Počs</p>
+        <div class="spele1">
+            <div>
+                <a href="/gamesLapa/games/memoryGame.html"><button type="button"><span></span>Atmiņas Spēle</button><img src="/Atteli/Think.png" class="MemoryGameLogo"></a>
+                <a href="#other_game"><button type="button"><span></span>Cita Spēle</button><img src="/Atteli/Joystick.png" class="OtherGameLogo"></a>
+            </div>
         </div>
-       
+
     </body>
     <script>src="script.js"</script>
-</html>
+</html> 
