--- a/homeLapa/home.html
+++ b/homeLapa/home.html
@@ -14,9 +14,9 @@
                 <div class="navbar_container">
                     <a href="home.html"><img src="/Atteli/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
-                        <li><a href="home.html" class="navbar_links" id="home-page">Mājas</a></li>
+                        <li><a href="home.html" class="navbar_linksA" id="home-page">Mājas</a></li>
                         <li><a href="/alfabetsLapa/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
-                        <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="/gamesLapa/spelesLapa.html" class="navbar_links" id="game-page">Spēles</a></li>
                         <li><a href="/videoLapa/video.html" class="navbar_links" id="video-link">Video</a></li>
                         <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
