--- a/videoLapa/video.html
+++ b/videoLapa/video.html
@@ -16,8 +16,8 @@
                     <ul class="navbar_menu">
                         <li><a href="/homeLapa/home.html" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabetsLapa/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
-                        <li><a href="#speles" class="navbar_links" id="game-page">Spēles</a></li>
-                        <li><a href="video.html" class="navbar_links" id="video-link">Video</a></li>
+                        <li><a href="/gamesLapa/spelesLapa.html" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="video.html" class="navbar_linksA" id="video-link">Video</a></li>
                         <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
