--- a/gamesLapa/spelesLapa.html
+++ b/gamesLapa/spelesLapa.html
@@ -27,7 +27,7 @@
         <div class="spele1">
             <div>
                 <a href="/gamesLapa/games/memoryGame.html"><button type="button"><span></span>Atmiņas Spēle</button><img src="/Atteli/Think.png" class="MemoryGameLogo"></a>
-                <a href="#other_game"><button type="button"><span></span>Cita Spēle</button><img src="/Atteli/Joystick.png" class="OtherGameLogo"></a>
+                <a href="/gamesLapa//games/wordGame.html"><button type="button"><span></span>Mini vārdu!</button><img src="/Atteli/Map.png" class="WordGameLogo"></a>
             </div>
         </div>
 
