--- a/gamesLapa/games/wordGame.html
+++ b/gamesLapa/games/wordGame.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Atmiņas Spēle</title>
-        <link rel="stylesheet" href="memoryGame.css">
-        <script src="memorygame.js" defer></script>
+        <title>Mini Vārdu!</title>
+        <!--Google Fonts-->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="wordGame.css">
+        <script src="wordGame.js" defer></script>
     </head>
     <body>
         <!-- Navigational Bar Section -->
@@ -25,19 +30,17 @@
             </div>
         </div>
 
-        <div class="game">
-            <div class="controls">
-                <button>Sākt</button>
-                <div class="stats">
-                    <div class="moves">0 Soļu</div>
-                    <div class="timer">Laiks: 0 sekundes</div>
-                </div>
-            </div>
-            <div class="board-container">
-                <div class="board" data-dimension="4"></div>
-                <div class="win">Tu Uzvarēji!</div>
-            </div>
-        </div>
+        <div class="wrapper">
+            <div class="hint-ref"></div>
+            <div id="user-input-section"></div>
+            <div id="message"></div>
+            <div id="letter-container"></div>
+          </div>
+          <div class="controls-container">
+            <div id="result"></div>
+            <div id="word"></div>
+            <button id="start">Sākt</button>
+          </div>
 
     </body>
 
