--- a/alfabetsLapa/alfabets.html
+++ b/alfabetsLapa/alfabets.html
@@ -159,7 +159,7 @@
                  <a class="tooltip">
                     <button>K</button>
                     <span><img src="/Atteli/Burti/K.png"><br><button onclick="myFunction('k')">🔊</button>
-                    <h3>Kaķis</h3>
+                    <h3>Klauns</h3>
                     <audio id="aSound" src="/Sounds/a.mp3"></audio>
                     </span>
                  </a>
